<resources>
    <string name="app_name">rschaeff_project3</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_add">ADD</string>
    <string name="button_sub">SUB</string>
    <string name="button_mul">MUL</string>
    <string name="button_div">DIV</string>
    <string name="button_neg">NEG (-)</string>
    <string name="button_clr">CLR</string>
    <string name="button_equal">=</string>
    <string name="button_dot">.</string>
</resources>