<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display_result"
        android:layout_width="379dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_current"
        android:layout_width="379dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:autoText="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_result" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/button_7"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/display_current" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_9"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_8"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/button_4"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_6"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_5"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/button_1"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_3"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_sub"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_sub"
        app:layout_constraintEnd_toStartOf="@+id/button_mul"
        app:layout_constraintStart_toEndOf="@+id/button_add"
        app:layout_constraintTop_toBottomOf="@+id/button_0" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/button_add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_sub"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_mul"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_mul"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_sub"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/button_div"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_neg"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_neg"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_neg"
        app:layout_constraintEnd_toStartOf="@+id/button_clr"
        app:layout_constraintStart_toEndOf="@+id/button_div"
        app:layout_constraintTop_toBottomOf="@+id/button_sub" />

    <Button
        android:id="@+id/button_clr"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_clr"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_neg"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_neg" />

</androidx.constraintlayout.widget.ConstraintLayout>